[package]
name = "config_lang_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "config_lang_reader"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module", "abi3-py38"] }
toml = "0.8"
anyhow = "1.0.98"
serde_yaml = "0.9.34+deprecated"
serde_json = "1.0.140"
quick-xml = { version = "0.37.5", features = ["serialize"] }